--- a/src/pages/streaks/StreaksPage.module.scss
+++ b/src/pages/streaks/StreaksPage.module.scss
@@ -103,7 +103,6 @@
   gap: 12px;
   padding: 12px 0 11px;
   cursor: pointer;
-  border-bottom: 1px solid var(--surface-default);
   transition: background-color 0.2s;
 }
 
